# cgroups-hs

./: TODO  cgroups.cabal  example1.hs
System/Linux/: Cgroups.hs
System/Linux/Cgroups/: Device.hs  Types.hs
System/Linux/Cgroups/Subsystem/: .Memory.hs.swp  BlkIO.hs  Cpu.hs  CpuAcct.hs  Devices.hs  Freezer.hs  Memory.hs
example/: cgroup_event_listener.hs  cgroup_watchdog.hs
