name:                cgroups
version:             0.0.1
synopsis:            Library for simplifying cgroups actions
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     System.Linux.Cgroups, 
                       System.Linux.Cgroups.Types,
                       System.Linux.Cgroups.Subsystem.Cpu
                       System.Linux.Cgroups.Subsystem.CpuAcct
                       System.Linux.Cgroups.Subsystem.Devices
  extensions: OverloadedStrings, NoImplicitPrelude
  -- other-modules:       
  build-depends:       base >=4.6 && <5, 
                       basic-prelude ==0.3.*,
                       system-fileio,
                       system-filepath,
                       data-default,
                       mtl, text,
                       containers,
                       -- remove
                       hinotify
